# rickgl

./: CMakeLists.txt  Dockerfile  README.md  build-wasm.sh  build-windows.sh  build.sh  deploy-wasm.sh  index.html  win64.cmake
.devcontainer/: devcontainer.json
assets/: rickgl.blend  rickgl.blend1
assets/models/: car.mtl  cube.mtl  map.mtl
assets/shaders/: shader_frag.frag  shader_frag.fs  shader_vert.vert  shader_vert.vs
src/: camera.h  file.h  main.c  model.h  nuklear_glfw_gl3.h  rickgl.h  shader.h  texture.h  tick.h
webgl/: .gitignore  package-lock.json  package.json
webgl/app/: globals.css  page.js
webgl/public/: base.js  index.js
